{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 1457,
  "lineage": "ece58a5f-06af-43ff-8fb5-beb910f9b7fc",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065a492fef70f84b1",
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:instance/i-058819b992efa7605",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058819b992efa7605",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_asg_bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019189ab7340b651f",
            "private_dns": "ip-10-0-0-95.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.95",
            "public_dns": "ec2-54-255-166-23.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.166.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ee7164cef9c1b08",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bea0934fb9dc7b9d",
            "tags": {
              "Name": "bastion-master"
            },
            "tags_all": {
              "Name": "bastion-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0381d663401abf592"
            ]
          },
          "dependencies": [
            "module.key-pair.aws_key_pair.master-key",
            "module.region-az.data.aws_availability_zones.available",
            "module.sg_bastion.aws_security_group.bastion_host_sg",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.eip_ngw_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d64e4c3e5429dd3",
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:elastic-ip/eipalloc-09d64e4c3e5429dd3",
            "domain": "vpc",
            "id": "eipalloc-09d64e4c3e5429dd3",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-228-36-90.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.36.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ngw_1"
            },
            "tags_all": {
              "Name": "eip_ngw_1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_ngw_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a62a32592373b2dd",
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:elastic-ip/eipalloc-0a62a32592373b2dd",
            "domain": "vpc",
            "id": "eipalloc-0a62a32592373b2dd",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-179-204-211.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.204.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ngw_2"
            },
            "tags_all": {
              "Name": "eip_ngw_2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:internet-gateway/igw-0f68e65cf06e36918",
            "id": "igw-0f68e65cf06e36918",
            "owner_id": "160885258086",
            "tags": {
              "Name": "igw-vpc-lab01"
            },
            "tags_all": {
              "Name": "igw-vpc-lab01"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:loadbalancer/app/webservers-lb/03ba20b574fc22a3",
            "arn_suffix": "app/webservers-lb/03ba20b574fc22a3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webservers-lb-368348308.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:loadbalancer/app/webservers-lb/03ba20b574fc22a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webservers-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb63c88b7a84a2ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a5ae33dc853a5096"
              },
              {
                "subnet_id": "subnet-0bea0934fb9dc7b9d"
              }
            ],
            "subnets": [
              "subnet-0a5ae33dc853a5096",
              "subnet-0bea0934fb9dc7b9d"
            ],
            "tags": {
              "Name": "Webservers-LB"
            },
            "tags_all": {
              "Name": "Webservers-LB"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.sg-lb.aws_security_group.lb-sg",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.lb-listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:listener/app/webservers-lb/03ba20b574fc22a3/4373bc8287c5d179",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:listener/app/webservers-lb/03ba20b574fc22a3/4373bc8287c5d179",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:loadbalancer/app/webservers-lb/03ba20b574fc22a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.application-lb",
            "module.region-az.data.aws_availability_zones.available",
            "module.sg-lb.aws_security_group.lb-sg",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.lb-listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:listener/app/webservers-lb/03ba20b574fc22a3/62bc23cef347f139",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:160885258086:certificate/72718c99-5f67-456e-9f95-67f90fbaf60e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:targetgroup/app-lb-tg/bf12e0bb3a6e86b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:listener/app/webservers-lb/03ba20b574fc22a3/62bc23cef347f139",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:loadbalancer/app/webservers-lb/03ba20b574fc22a3",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb-target-groups.aws_lb_target_group.app-lb-tg",
            "module.lb.aws_lb.application-lb",
            "module.region-az.data.aws_availability_zones.available",
            "module.route53-acm.aws_acm_certificate.aws-ssl-cert",
            "module.route53-acm.data.aws_route53_zone.dns",
            "module.sg-lb.aws_security_group.lb-sg",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.lb-target-groups",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:targetgroup/app-lb-tg/bf12e0bb3a6e86b0",
            "arn_suffix": "targetgroup/app-lb-tg/bf12e0bb3a6e86b0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-399",
                "path": "/tasks",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:160885258086:targetgroup/app-lb-tg/bf12e0bb3a6e86b0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-lb-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "webserver-target-group"
            },
            "tags_all": {
              "Name": "webserver-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.natgw_az_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d64e4c3e5429dd3",
            "association_id": "eipassoc-0450a2ef30d58bb1e",
            "connectivity_type": "public",
            "id": "nat-0a338dddefd299d0f",
            "network_interface_id": "eni-095cf4d9d9a2bfeb3",
            "private_ip": "10.0.0.99",
            "public_ip": "13.228.36.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bea0934fb9dc7b9d",
            "tags": {
              "Name": "ngw_az_1"
            },
            "tags_all": {
              "Name": "ngw_az_1"
            }
          },
          "dependencies": [
            "module.eip_ngw_1.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.region-az.data.aws_availability_zones.available",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.natgw_az_2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a62a32592373b2dd",
            "association_id": "eipassoc-0a8efc1322ada11ad",
            "connectivity_type": "public",
            "id": "nat-0e60f15a4a6afc428",
            "network_interface_id": "eni-02660c1a3db20842a",
            "private_ip": "10.0.1.201",
            "public_ip": "54.179.204.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a5ae33dc853a5096",
            "tags": {
              "Name": "ngw_az_2"
            },
            "tags_all": {
              "Name": "ngw_az_2"
            }
          },
          "dependencies": [
            "module.eip_ngw_2.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.region-az.data.aws_availability_zones.available",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-natgateway-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:route-table/rtb-080c5522686d252ba",
            "id": "rtb-080c5522686d252ba",
            "owner_id": "160885258086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a338dddefd299d0f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable-ngw-1"
            },
            "tags_all": {
              "Name": "routetable-ngw-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_ngw_1.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.natgw_az_1.aws_nat_gateway.nat_gw",
            "module.region-az.data.aws_availability_zones.available",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-natgateway-2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:route-table/rtb-0797bbbcf370853e3",
            "id": "rtb-0797bbbcf370853e3",
            "owner_id": "160885258086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e60f15a4a6afc428",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable-ngw-2"
            },
            "tags_all": {
              "Name": "routetable-ngw-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_ngw_2.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.natgw_az_2.aws_nat_gateway.nat_gw",
            "module.region-az.data.aws_availability_zones.available",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.route-table-public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:route-table/rtb-0f42aae554c93e737",
            "id": "rtb-0f42aae554c93e737",
            "owner_id": "160885258086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f68e65cf06e36918",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routetable-public"
            },
            "tags_all": {
              "Name": "Routetable-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-associate-private-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a72f69dadba32310",
            "route_table_id": "rtb-080c5522686d252ba",
            "subnet_id": "subnet-029e6a9d7743ecd80"
          },
          "dependencies": [
            "module.eip_ngw_1.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.natgw_az_1.aws_nat_gateway.nat_gw",
            "module.region-az.data.aws_availability_zones.available",
            "module.route-table-natgateway-1.aws_route_table.private_rt_a",
            "module.subnet_private_1.aws_subnet.subnet_public",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-associate-private-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fa63f7211b2add5",
            "route_table_id": "rtb-0797bbbcf370853e3",
            "subnet_id": "subnet-0bc2021572a36d09e"
          },
          "dependencies": [
            "module.eip_ngw_2.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.natgw_az_2.aws_nat_gateway.nat_gw",
            "module.region-az.data.aws_availability_zones.available",
            "module.route-table-natgateway-2.aws_route_table.private_rt_a",
            "module.subnet_private_2.aws_subnet.subnet_public",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-associate-private-3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0705f89d4ac465c5d",
            "route_table_id": "rtb-080c5522686d252ba",
            "subnet_id": "subnet-049416046bae6bde0"
          },
          "dependencies": [
            "module.eip_ngw_1.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.natgw_az_1.aws_nat_gateway.nat_gw",
            "module.region-az.data.aws_availability_zones.available",
            "module.route-table-natgateway-1.aws_route_table.private_rt_a",
            "module.subnet_private_3.aws_subnet.subnet_public",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-associate-private-4",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f249d7c54cb4cd7d",
            "route_table_id": "rtb-0797bbbcf370853e3",
            "subnet_id": "subnet-05ec4b4914a8f6595"
          },
          "dependencies": [
            "module.eip_ngw_2.aws_eip.nat_eip_a",
            "module.igw.aws_internet_gateway.igw",
            "module.natgw_az_2.aws_nat_gateway.nat_gw",
            "module.region-az.data.aws_availability_zones.available",
            "module.route-table-natgateway-2.aws_route_table.private_rt_a",
            "module.subnet_private_4.aws_subnet.subnet_public",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-associate-public-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06930d9c5fe84d81c",
            "route_table_id": "rtb-0f42aae554c93e737",
            "subnet_id": "subnet-0bea0934fb9dc7b9d"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.region-az.data.aws_availability_zones.available",
            "module.route-table-public.aws_route_table.route-table",
            "module.subnet_public_1.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.rtb-associate-public-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6e7f42d430d65a5",
            "route_table_id": "rtb-0f42aae554c93e737",
            "subnet_id": "subnet-0a5ae33dc853a5096"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.region-az.data.aws_availability_zones.available",
            "module.route-table-public.aws_route_table.route-table",
            "module.subnet_public_2.aws_subnet.subnet_public",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.set-master-default-router-associate",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-master-default-router-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f2576a030e3dd8a",
            "original_route_table_id": "rtb-034137f985170b97e",
            "route_table_id": "rtb-0f42aae554c93e737",
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route-table-public.aws_route_table.route-table",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.sg-db-rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:security-group/sg-07bf59a1c19956143",
            "description": "Allow rds access",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bf59a1c19956143",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-mysql-sg",
            "name_prefix": "",
            "owner_id": "160885258086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.sg-lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:security-group/sg-0fb63c88b7a84a2ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0fb63c88b7a84a2ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "160885258086",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.sg_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodejs_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:security-group/sg-0bfa87999d3ad7023",
            "description": "Security group for Node.js app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfa87999d3ad7023",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "nodejs-app-sg",
            "name_prefix": "",
            "owner_id": "160885258086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodejs-app-sg"
            },
            "tags_all": {
              "Name": "nodejs-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.sg_bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:security-group/sg-0381d663401abf592",
            "description": "Security group for Bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0381d663401abf592",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-host-sg",
            "name_prefix": "",
            "owner_id": "160885258086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-sg"
            },
            "tags_all": {
              "Name": "bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:subnet/subnet-029e6a9d7743ecd80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e6a9d7743ecd80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885258086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az-1"
            },
            "tags_all": {
              "Name": "private-subnet-az-1"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:subnet/subnet-0bc2021572a36d09e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc2021572a36d09e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885258086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az-1"
            },
            "tags_all": {
              "Name": "private-subnet-az-1"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private_3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:subnet/subnet-049416046bae6bde0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049416046bae6bde0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885258086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az-1"
            },
            "tags_all": {
              "Name": "private-subnet-az-1"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private_4",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:subnet/subnet-05ec4b4914a8f6595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec4b4914a8f6595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885258086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az-1"
            },
            "tags_all": {
              "Name": "private-subnet-az-1"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:subnet/subnet-0bea0934fb9dc7b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bea0934fb9dc7b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885258086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az-1"
            },
            "tags_all": {
              "Name": "public-subnet-az-1"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:subnet/subnet-0a5ae33dc853a5096",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5ae33dc853a5096",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885258086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az-2"
            },
            "tags_all": {
              "Name": "public-subnet-az-2"
            },
            "vpc_id": "vpc-00a1ca51d7a76ea1d"
          },
          "dependencies": [
            "module.region-az.data.aws_availability_zones.available",
            "module.vpc-app.aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160885258086:vpc/vpc-00a1ca51d7a76ea1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a8905209d4c4def",
            "default_route_table_id": "rtb-034137f985170b97e",
            "default_security_group_id": "sg-0447c306e01ba7100",
            "dhcp_options_id": "dopt-01767abecb0dde5c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a1ca51d7a76ea1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034137f985170b97e",
            "owner_id": "160885258086",
            "tags": {
              "Name": "lab01-vpc"
            },
            "tags_all": {
              "Name": "lab01-vpc"
            }
          }
        }
      ]
    }
  ]
}